--- a/bubbletrouble/requirements.txt
+++ b/bubbletrouble/requirements.txt
@@ -4,6 +4,7 @@ attrs==21.4.0
 backcall==0.2.0
 backports.zoneinfo==0.2.1
 black==22.1.0
+bokeh==2.4.2
 CensusData==1.15
 certifi==2021.10.8
 charset-normalizer==2.0.12
@@ -19,31 +20,38 @@ geopandas==0.10.2
 idna==3.3
 ipython==8.0.1
 jedi==0.18.1
+Jinja2==3.0.3
+MarkupSafe==2.1.0
 matplotlib-inline==0.1.3
 munch==2.5.0
 mypy-extensions==0.4.3
 numpy==1.22.2
+packaging==21.3
 pandas==1.4.1
 parso==0.8.3
 pathspec==0.9.0
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==9.0.1
 platformdirs==2.5.1
 prompt-toolkit==3.0.28
 ptyprocess==0.7.0
 pure-eval==0.2.2
 Pygments==2.11.2
+pyparsing==3.0.7
 pyproj==3.3.0
 python-dateutil==2.8.2
 pytz==2021.3
+PyYAML==6.0
 requests==2.27.1
 Shapely==1.8.1.post1
 six==1.16.0
 sqlparse==0.4.2
 stack-data==0.2.0
 tomli==2.0.1
+tornado==6.1
 traitlets==5.1.1
-typing_extensions==4.1.1
+typing-extensions==4.1.1
 tzdata==2021.5
 urllib3==1.26.8
 wcwidth==0.2.5
